--- a/emacs.org
+++ b/emacs.org
@@ -4127,6 +4127,7 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
 
     (setq mu4e-completing-read-function #'completing-read)
     (setq mu4e-context-policy 'pick-first)
+    (setq mu4e-compose-complete-addresses nil)
 
     (setq mu4e-use-fancy-chars t)
     (setq mu4e-hide-index-messages t))
@@ -4262,6 +4263,25 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
     (require 'mu4e)
 
     (setq mu4e-org-link-query-in-headers-mode t))
+#+END_SRC
+
+** bbdb - Address book :wip:
+[[http://savannah.nongnu.org/projects/bbdb][bbdb (Savannah)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package bbdb
+    :straight t
+    :after mu4e
+    :config
+    (push '(("Belgium" "België") "spcC" "@%s\n@@%p @%c@\n%C@" "%c")
+          bbdb-address-format-list)
+    (setq bbdb-default-country nil)
+    (setq bbdb-phone-style nil)
+    (bbdb-initialize 'mu4e 'message))
+
+  (use-package bbdb-com
+    :bind
+    ("C-c x a" . bbdb))
 #+END_SRC
 
 ** elfeed - News reader
