--- a/emacs.org
+++ b/emacs.org
@@ -4254,6 +4254,9 @@ For e-mail accounts, see [[*E-mail accounts][E-mail accounts]].
 ** bbdb - Address book :wip:
 [[http://savannah.nongnu.org/projects/bbdb][bbdb (Savannah)]]
 
+To show birthdays as agenda entries, see [[info:org#Weekly/daily agenda][Anniversaries from BBDB
+(info)]].
+
 #+BEGIN_SRC emacs-lisp
   (use-package bbdb
     :straight t
@@ -5520,6 +5523,22 @@ templates]].
     ("C-c o l" . org-store-link)
     :config
     (setq org-link-keep-stored-after-insertion t))
+
+  (use-package ol-bbdb
+    :defer t
+    :preface
+    (defun koek-org/construct-birthday-entry-name (name age _age-suffix)
+      "Return name of agenda entry for birthday.
+  NAME is a string, the name of the person.  AGE is an integer, the
+  age of the person.  _AGE-SUFFIX is ignored."
+      (format "[[bbdb:%s][%s (%d %s old)]]"
+              name name age (or (and (= age 1) "year") "years")))
+    :config
+    ;; BBDB anniversary (many, any type) and vCard ANNIVERSARY (one, any
+    ;; type except birthday) aren't compatible, birthday and BDAY are
+    (setq org-bbdb-anniversary-field 'birthday)
+    (setq org-bbdb-anniversary-format-alist
+          '(("birthday" . koek-org/construct-birthday-entry-name))))
 
   (use-package ox
     :defer t
