--- a/emacs.org
+++ b/emacs.org
@@ -3426,7 +3426,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
   (defun exar--decode-terminated-string (bytes)
     (exar--decode-string
      (seq-take-while (lambda (byte)
-                       (not (= byte ?\C-j)))
+                       (/= byte ?\C-j))
                      bytes)))
 
   (defun exar--decode-manufacturer (bytes)
@@ -3604,7 +3604,7 @@ For monitors and monitor layouts, see [[*Monitors][Monitors]].
            ;; Sort primary first, mirror dispwin
            (sorted (cons primary
                          (seq-filter (lambda (output)
-                                       (not (= (car output) (car primary))))
+                                       (/= (car output) (car primary)))
                                      outputs))))
       (seq-map-indexed (lambda (output i)
                          (cons (car output) (1+ i)))
@@ -6063,7 +6063,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
         (when (and (bound-and-true-p eyebrowse-mode) (moody-window-active-p))
           (let ((workspaces (koek-ml/get-eyebrowse-workspaces))
                 (selected-n (eyebrowse--get 'current-slot)))
-            (when (or (> (length workspaces) 1) (not (= selected-n 0)))
+            (when (or (> (length workspaces) 1) (/= selected-n 0))
               `(,(moody-ribbon
                   (mapconcat
                    (lambda (workspace)
