[emacs] Ensure agenda files are unique

--- a/emacs.org
+++ b/emacs.org
@@ -6468,7 +6468,8 @@ of ~koek/projects-dir~, are agenda files. Configure agendas.
         (seq-mapcat (lambda (file-name)
                       (directory-files file-name 'full (rx ".org" line-end))))
         (seq-filter (lambda (file-name)
-                      (not (koek/lock-file-p file-name))))))
+                      (not (koek/lock-file-p file-name))))
+        seq-uniq))
 
     (define-advice org-agenda-files
         (:before (&rest _args) koek/update-agenda-files)
