[emacs] Rename various functions
Rename:
- koek-bngo/get-create-default-library-buffer to koek-bngo/get-default-library-buffer
- koek-bngo/get-create-default-playlist-buffer to koek-bngo/get-default-playlist-buffer
- koek/make-initial-buffer to koek/get-initial-buffer

--- a/emacs.org
+++ b/emacs.org
@@ -4436,13 +4436,13 @@ Stavrou)]].
     :hook (dired-mode . bongo-dired-library-mode)
     :preface
     (define-advice bongo-default-library-buffer
-        (:override () koek-bngo/get-create-default-library-buffer)
+        (:override () koek-bngo/get-default-library-buffer)
       (require 'dired)
       (dired-noselect bongo-default-directory))
 
     ;; Disable banner
     (define-advice bongo-default-playlist-buffer
-        (:override () koek-bngo/get-create-default-playlist-buffer)
+        (:override () koek-bngo/get-default-playlist-buffer)
       (with-current-buffer (get-buffer-create bongo-default-playlist-buffer-name)
         (unless (derived-mode-p 'bongo-playlist-mode)
           (bongo-playlist-mode))
@@ -6772,14 +6772,14 @@ Configure media.
 Show agenda as initial buffer.
 
 #+BEGIN_SRC emacs-lisp
-  (defun koek/make-initial-buffer ()
+  (defun koek/get-initial-buffer ()
     "Return initial buffer."
     (let ((layout (current-window-configuration)))
       (org-agenda-list)
       (set-window-configuration layout))
     (get-buffer "*Org Agenda*"))
 
-  (setq initial-buffer-choice #'koek/make-initial-buffer)
+  (setq initial-buffer-choice #'koek/get-initial-buffer)
 #+END_SRC
 
 * Footer
