--- a/dotfiles.org
+++ b/dotfiles.org
@@ -836,6 +836,13 @@ Move configuration directory out of the way.
   IPYTHONDIR="${XDG_CONFIG_HOME:-$HOME/.config}/ipython"
 #+END_SRC
 
+* Leiningen
+Move data directory out of the way.
+
+#+BEGIN_SRC conf :tangle stow/leiningen/.config/environment.d/50-leiningen.conf
+  LEIN_HOME="${XDG_DATA_HOME:-$HOME/.local/share}/lein"
+#+END_SRC
+
 * CUDA
 Move cache directory out of the way.
 
