[emacs] Declare keycast-mode is external

--- a/emacs.org
+++ b/emacs.org
@@ -4818,7 +4818,7 @@ Stavrou)]].
         (lambda ()
           (setq moody-mode-line-height height)))))
 
-  (declare-function keycast-mode "keycast")
+  (declare-function keycast-mode "ext:keycast")
   (defvar keycast-mode)
 
   (defun prepcast-prep-keycast ()
