[emacs] Bind koek-thm/toggle-modus-variant

--- a/emacs.org
+++ b/emacs.org
@@ -5923,6 +5923,8 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
        (or (and (eq (car custom-enabled-themes) 'modus-operandi) 'vivendi)
            'operandi)))
     :init
+    (bind-key "C-c z t" #'koek-thm/toggle-modus-variant)
+
     (setq modus-themes-bold-constructs t)
     (setq modus-themes-slanted-constructs t)
     (setq modus-themes-mode-line 'moody)
